hphp/hack/test/typecheck/variablevariable_disallowed.php.exp
File "variablevariable_disallowed.php", line 6, characters 10-10:
Variable Variables are not legal (Parsing[1002])
